# AIagent

./: .gitignore  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  config.example.toml
examples/: basic_chat.rs  custom_skills.rs  ollama_example.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/core/: agent.rs  mod.rs
src/cron/: mod.rs
src/llm/: mod.rs
src/memory/: mod.rs
src/planning/: mod.rs
src/prompts/: mod.rs
src/reflection/: mod.rs
src/skills/: mod.rs
src/utils/: mod.rs
src/workflow/: mod.rs
