[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"
description = "A powerful AI Agent framework with memory, prompts, LLM integration, and skill execution"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Template engine
handlebars = "5.0"

# Expression evaluation for calculator skill
meval = "0.2"

[dev-dependencies]
tokio-test = "0.4"
