[package]
name = "ai-agent-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5.3", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ai-agent = { path = ".." }

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[features]
default = []
